# langgraph-builder-template-hackathon

./: .env.example  .gitignore  .replit  LICENSE  README.md  langgraph.json  pyproject.toml  replit.nix  setup.cfg
.langgraph_api/: .langgraph_ops.pckl
.streamlit/: config.toml
graph/: .env.example  langgraph.json  pyproject.toml  requirements.txt  setup.cfg
graph/requirements/: dev.txt  prod.txt
graph/scripts/: generate_pyproject.toml.py  langgraph-studio.sh  lint.py  lint.sh  setup.sh  start.sh
graph/src/agent/: agent.py  configuration.py  graph.py  langgraph-studio.py  state.py  utils.py
graph/src/agent/agents/: base.py  dev_requirement_research.py  oas_discovery.py  oas_retrieval.py  pre_research.py  product_requirements.py
graph/src/agent/prompts/: understanding_the_service.py
graph/src/dev_research_agent/: __init__.py  graph.py  langgraph-studio.py  state.py
graph/src/product_research_agent/: graph.py  langgraph-studio.py
graph/src/prompts/: dev_req_research.py  oas_discovery.py  oas_retrieval.py  pre_research.py  product_req_research.py  sdk_open_api.py
scripts/: deploy.sh  start.sh
streamlit/: agent.py  app.py  markdown_utils.py  utils.py
streamlit/pages/: Research.py
