[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
requires-python = ">=3.9"
dependencies = [ "click", "langgraph", "langchain_anthropic", "tavily-python", "langchain_community", "langchain_core",]

[tool.setuptools]
packages = [ "langgraph.templates.agent", "agent",]

[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
agent = "src/agent"
