[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
requires-python = ">=3.9,<3.12"
dependencies = [
    "langgraph>=0.0.1",
    "langchain_anthropic>=0.1.0",
    "tavily-python>=0.1.0",
    "langchain_community>=0.0.1",
    "langchain-core>=0.0.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "requests>=2.32.3",
    "langchain-openai>=0.3.6",
    "langchain_experimental>=0.0.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openai>=1.12.0",
    "gpt-researcher>=0.12.3",
    "pytest-playwright>=0.7.0",
    "playwright==1.40.0",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent", "shared", "streamlit"]

[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
agent = "src/agent"
shared = "shared"

[project.optional-dependencies]
dev = [
    "click>=8.1.8",
    "toml",
    "black==24.10.0",
    "flake8-blind-except==0.2.1",
    "flake8-debugger==4.1.2",
    "flake8-docstrings==1.7.0",
    "flake8-isort==6.1.1",
    "flake8==7.1.1",
    "isort==5.13.2",
    "pep8-naming==0.14.1",
    "langgraph-cli[inmem]",
] 
